--- a/src/app/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/restaurant-detail/restaurant-detail.component.html
@@ -31,10 +31,18 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer detail-footer">
-          <a class="pull-left detail-active" href="detail-restaurant.html">
+          <a
+            class="pull-left"
+            routerLinkActive="detail-active"
+            [routerLink]="['menu']"
+          >
             Menu
           </a>
-          <a class="pull-right" href="detail-restaurant-reviews.html">
+          <a
+            class="pull-right"
+            routerLinkActive="detail-active"
+            [routerLink]="['reviews']"
+          >
             Avaliações
           </a>
         </div>
@@ -44,6 +52,6 @@
   </div>
 
   <div class="row">
-    <mt-menu></mt-menu>
+    <router-outlet></router-outlet>
   </div>
 </section>
