--- a/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,3 @@
-<!--INICIO DO CARRINHO-->
 <div class="box box-solid">
   <div class="box-header">
     <i class="fa fa-shopping-cart"></i>
@@ -8,13 +7,12 @@
   <!-- /.box-header -->
   <div class="box-body">
     <div class="table-responsive">
-        <table class="table">
-          <tbody>
+      <table class="table">
+        <tbody>
           <tr>
-            <th style="width:60%">Cerveja:</th>
+            <th style="width: 60%;">Cerveja:</th>
 
             <td class="text-right">R$ 6,00</td>
-
           </tr>
           <tr>
             <th>Pork Burger</th>
@@ -31,14 +29,18 @@
 
             <td class="text-right">R$ 80,90</td>
           </tr>
-        </tbody></table>
-      </div>
+        </tbody>
+      </table>
+    </div>
   </div>
   <div class="box-footer">
     <div class="pull-right">
-      <button type="button" class="btn btn-danger"><i class="fa fa-trash"></i> Limpar</button>
-      <a href="order.html" class="btn btn-success"><i class="fa fa-credit-card"></i> Fechar Pedido</a>
+      <button type="button" class="btn btn-danger">
+        <i class="fa fa-trash"></i> Limpar
+      </button>
+      <a href="order.html" class="btn btn-success"
+        ><i class="fa fa-credit-card"></i> Fechar Pedido</a
+      >
     </div>
   </div>
 </div>
-<!-- FIM DO CARRINHO -->
