add item no carrinho - ERROR

--- a/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div class="box-footer" *ngIf="items().length">
-    <th>({{ item.quantity }}x) {{ item.menuItem.name }}</th>
+    <th>({{ item?.quantity }}x) {{ item?.menuItem.name }}</th>
     <td class="text-right">
       <a (click)="removeItem(item)" class="btn btn-sm danger">
         <i class="fa fa-remove"></i>
