--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -25,33 +25,34 @@
             label="Endereço"
             ><input
               ngModel
+              required
               name="address"
               class="form-control"
               placeholder="Endereço"
               minlength="5"
               autocomplete="off"
-              required
             />
           </mt-input-container>
         </div>
 
-        <div class="col-sm-2 col-xs-6">
+        <div class="col-sm-3 col-xs-6">
           <mt-input-container
-            errorMessage="Campo obrigatório. Informe o número da residência"
+            errorMessage="Campo obrigatório. Apenas números"
             label="Número"
           >
             <input
               ngModel
+              required
+              pattern="^[0-9]*$"
               name="number"
               type="text"
               class="form-control"
               placeholder="Número"
-              required
             />
           </mt-input-container>
         </div>
 
-        <div class="col-sm-4 col-xs-6">
+        <div class="col-sm-3 col-xs-6">
           <mt-input-container>
             <input
               ngModel
