--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -72,49 +72,14 @@
         <div class="col-xs-12">
           <p class="lead">Itens do Pedido:</p>
         </div>
-        <div class="col-xs-12 table-responsive">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th class="text-center">Quantidade</th>
-                <th>Item</th>
-                <th>Descrição</th>
-                <th class="text-right">Subtotal</th>
-                <th class="text-right"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="text-center">
-                  <a class="btn btn-sm"><i class="fa fa-minus"></i></a>
-                  1
-                  <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                </td>
-                <td>Cup Cake</td>
 
-                <td>Recheado com doce de leite</td>
-                <td class="text-right">R$ 10,00</td>
-                <td class="text-right">
-                  <a class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center">
-                  <a class="btn btn-sm"><i class="fa fa-minus"></i></a>
-                  1
-                  <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                </td>
-                <td>Croissant</td>
+        <mt-order-items
+          [items]="cartItems()"
+          (increaseQty)="increaseQty($event)"
+          (decreaseQty)="decreaseQty($event)"
+          (remove)="remove($event)"
+        ></mt-order-items>
 
-                <td>Recheado com presunto e queijo</td>
-                <td class="text-right">R$ 10,00</td>
-                <td class="text-right">
-                  <a class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
         <!-- /.col -->
       </div>
       <!-- /.row -->
@@ -127,6 +92,7 @@
           <div class="form-group">
             <mt-radio
               ngModel
+              required
               [options]="paymentOptions"
               name="paymentOption"
             ></mt-radio>
@@ -136,24 +102,10 @@
         <div class="col-sm-6 col-xs-12">
           <p class="lead">Frete e Total:</p>
 
-          <div class="table-responsive">
-            <table class="table">
-              <tbody>
-                <tr>
-                  <th style="width: 50%;">Itens:</th>
-                  <td class="text-right">R$ 20,00</td>
-                </tr>
-                <tr>
-                  <th>Frete:</th>
-                  <td class="text-right">R$ 8,00</td>
-                </tr>
-                <tr>
-                  <th>Total:</th>
-                  <td class="text-right">R$ 28,00</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <mt-delivery-costs
+            [delivery]="delivery"
+            [itemsValue]="itemsValue()"
+          ></mt-delivery-costs>
         </div>
         <!-- /.col -->
       </div>
@@ -161,7 +113,10 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button class="btn btn-success pull-right" [disabled]="!form.valid">
+        <button
+          class="btn btn-success pull-right"
+          [disabled]="!form.valid || cartItems().length == 0"
+        >
           <i class="fa fa-credit-card"></i> Concluir Pedido
         </button>
       </div>
