--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -2,9 +2,6 @@
 
 <section class="content">
   <section class="invoice">
-    {{ form.valid }}
-    {{ form.value | json }}
-
     <form #form="ngForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
@@ -56,7 +53,7 @@
           <mt-input-container>
             <input
               ngModel
-              name="optional"
+              name="optionalAddress"
               type="text"
               class="form-control"
               placeholder="Complemento"
@@ -114,8 +111,9 @@
     <div class="row">
       <div class="col-xs-12">
         <button
-          class="btn btn-success pull-right"
+          (click)="checkOrder(form.value)"
           [disabled]="!form.valid || cartItems().length == 0"
+          class="btn btn-success pull-right"
         >
           <i class="fa fa-credit-card"></i> Concluir Pedido
         </button>
