adicionando reactive forms

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -2,12 +2,53 @@
 
 <section class="content">
   <section class="invoice">
-    <form #form="ngForm" novalidate>
+    <form [formGroup]="orderForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
             <i class="fa fa-shopping-cart"></i> Finalize o seu pedido
           </h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="lead">Seus dados:</p>
+        </div>
+
+        <div class="col-sm-6 col-xs-12">
+          <mt-input-container
+            errorMessage="Campo obrigatório. Minímo de 5 caracteres"
+            label="Nome"
+            ><input
+              formControlName="name"
+              class="form-control"
+              placeholder="Nome"
+              autocomplete="off"
+            />
+          </mt-input-container>
+        </div>
+
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="E-mail inválido" label="E-mail">
+            <input
+              formControlName="email"
+              type="text"
+              class="form-control"
+              placeholder="E-mail"
+            />
+          </mt-input-container>
+        </div>
+
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container>
+            <input
+              formControlName="emailConfirmation"
+              type="text"
+              class="form-control"
+              placeholder="Confirmação de e-mail"
+            />
+          </mt-input-container>
         </div>
       </div>
 
@@ -21,12 +62,9 @@
             errorMessage="Campo obrigatório. Minímo de 5 caracteres"
             label="Endereço"
             ><input
-              ngModel
-              required
-              name="address"
+              formControlName="address"
               class="form-control"
               placeholder="Endereço"
-              minlength="5"
               autocomplete="off"
             />
           </mt-input-container>
@@ -38,10 +76,8 @@
             label="Número"
           >
             <input
-              ngModel
-              required
+              formControlName="number"
               pattern="^[0-9]*$"
-              name="number"
               type="text"
               class="form-control"
               placeholder="Número"
@@ -52,8 +88,7 @@
         <div class="col-sm-3 col-xs-6">
           <mt-input-container>
             <input
-              ngModel
-              name="optionalAddress"
+              formControlName="optionalAddress"
               type="text"
               class="form-control"
               placeholder="Complemento"
@@ -88,10 +123,8 @@
 
           <div class="form-group">
             <mt-radio
-              ngModel
-              required
               [options]="paymentOptions"
-              name="paymentOption"
+              formControlName="paymentOption"
             ></mt-radio>
           </div>
         </div>
@@ -111,8 +144,8 @@
     <div class="row">
       <div class="col-xs-12">
         <button
-          (click)="checkOrder(form.value)"
-          [disabled]="!form.valid || cartItems().length == 0"
+          (click)="checkOrder(orderForm.value)"
+          [disabled]="!orderForm.valid || cartItems().length == 0"
           class="btn btn-success pull-right"
         >
           <i class="fa fa-credit-card"></i> Concluir Pedido
