--- a/src/app/restaurant-detail/menu-item/menu-item.component.html
+++ b/src/app/restaurant-detail/menu-item/menu-item.component.html
@@ -1,4 +1,4 @@
-<div class="menu-item-info-box">
+<div [@menuItemAppeared]="menuItemState" class="menu-item-info-box">
   <span class="menu-item-info-box-icon">
     <img [src]="menuItem.imagePath" />
   </span>
