Estratégia de Navegação (Hash)

--- a/src/app/order-sumary/order-sumary.component.html
+++ b/src/app/order-sumary/order-sumary.component.html
@@ -9,8 +9,8 @@
     </p>
     <p><b>Avalie</b> sua experiência:</p>
     <p>
-      <mt-rating (rated)="rated = true"></mt-rating>
+      <mt-rating (rated)="rate()"></mt-rating>
     </p>
-    <p [hidden]="!rated">Obrigado pela sua avaliação</p>
+    <p *ngIf="rated">Obrigado pela sua avaliação</p>
   </div>
 </section>
