--- a/src/app/restaurants/restaurant/restaurant.component.html
+++ b/src/app/restaurants/restaurant/restaurant.component.html
@@ -8,7 +8,7 @@
       <span class="place-info-box-text">{{ restaurant.name }}</span>
 
       <span class="place-info-box-star">
-        <i class="fa fa-star"></i>{{ restaurant.ratting }}
+        <i class="fa fa-star"></i>{{ restaurant.rating }}
       </span>
 
       <span class="place-info-box-detail">{{ restaurant.category }}</span>
