--- a/src/styles.css
+++ b/src/styles.css
@@ -280,3 +280,19 @@ body {
 .has-error-block {
   color: #dd4b39;
 }
+
+/* barra de busca de restaurantes */
+
+.search-link {
+  cursor: pointer;
+  color: #555;
+}
+
+.search-link:hover {
+  color: #dd4b39;
+}
+
+.search-bar {
+  opacity: 0;
+  max-height: 0;
+}
