--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,6 +26,7 @@
         </ul>
       </div>
       <!-- /.navbar-collapse -->
+      <mt-user-datail></mt-user-datail>
     </div>
   </nav>
 </header>
