--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -28,6 +28,7 @@
         <!-- /.col -->
         <div class="col-xs-offset-8 col-xs-4">
           <button
+            (click)="login()"
             [disabled]="loginForme.invalid"
             type="submit"
             class="btn btn-primary btn-block btn-flat"
