--- a/src/app/restaurant-detail/menu-item/menu-item.component.html
+++ b/src/app/restaurant-detail/menu-item/menu-item.component.html
@@ -11,7 +11,7 @@
     </span>
 
     <span class="menu-item-info-box-price">
-      {{ menuItem.price | currency: "BRL":true }}
+      {{ menuItem.price | currency: "BRL":"symbol" }}
     </span>
 
     <a (click)="emitAddEvent()" class="">
