--- a/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -17,14 +17,14 @@
             <th>{{ item.menuItem.name }}</th>
 
             <td class="text-right">
-              {{ item.value() | currency: "BRL":true }}
+              {{ item.value() | currency: "BRL":"symbol" }}
             </td>
           </tr>
 
           <tr>
             <th>Total:</th>
 
-            <td class="text-right">{{ total() | currency: "BRL":true }}</td>
+            <td class="text-right">{{ total() | currency: "BRL":"symbol" }}</td>
           </tr>
         </tbody>
       </table>
