--- a/src/app/order/order-items/order-items.component.html
+++ b/src/app/order/order-items/order-items.component.html
@@ -34,7 +34,9 @@
 
         <td>{{ item.menuItem.description }}</td>
 
-        <td class="text-right">{{ item.value() | currency: "BRL":true }}</td>
+        <td class="text-right">
+          {{ item.value() | currency: "BRL":"symbol" }}
+        </td>
         <td class="text-right">
           <a (click)="emitRemoveQty(item)" class="btn btn-sm danger">
             <i class="fa fa-remove"></i>
